version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/SolverData/MAPDLBodyData.rst.txt
.. vale off



:class:`MAPDLBodyData`
======================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.SolverData.MAPDLBodyData

   Bases: :py:obj:`object`



.. py:currentmodule:: MAPDLBodyData

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~ElementTypeIds`
            - Gets the Element Type Ids for the body.
          * - :py:attr:`~MaterialIds`
            - Gets the Material Ids for the body.
          * - :py:attr:`~RealConstantId`
            - Gets the Real Constant Id for the body.







Property detail
---------------
.. py:property:: ElementTypeIds
   :type: Optional[Iterable[int]]


   
   Gets the Element Type Ids for the body.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaterialIds
   :type: Optional[Iterable[int]]


   
   Gets the Material Ids for the body.
















   ..
       !! processed by numpydoc !!

.. py:property:: RealConstantId
   :type: Optional[int]


   
   Gets the Real Constant Id for the body.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on